--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,16 @@
     <build>
         <pluginManagement>
             <plugins>
-                <plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.13.0</version>
+          <configuration>
+            <release>11</release>
+          </configuration>
+        </plugin>
+
+                     <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.10.1</version>
